fix: Remove overlap of address and balance in safe list sidebar

--- a/src/components/sidebar/SafeListItem/styles.module.css
+++ b/src/components/sidebar/SafeListItem/styles.module.css
@@ -28,9 +28,3 @@
 .withPendingButtons :global .MuiListItemSecondaryAction-root {
   right: 74px;
 }
-
-@media (max-width: 400px) {
-  .withPendingButtons :global .MuiListItemSecondaryAction-root {
-    right: 48px;
-  }
-}
